@@ -1,5 +1,10 @@
 2006-07-28  Roger Leigh  <rleigh@debian.org>
 
+	* sbuild/sbuild-session.cc
+	(save_termios, restore_termios): Close CTTY fd to prevent fd leak.
+
+2006-07-28  Roger Leigh  <rleigh@debian.org>
+
 	* schroot/schroot.cc, schroot/schroot-listmounts.cc,
 	schroot/schroot-releaselock.cc, dchroot/dchroot.cc,
 	dchroot-dsa/dchroot-dsa.cc: Use schroot_base::run<>.
